--- a/src/style.css
+++ b/src/style.css
@@ -1,56 +1,94 @@
 * {
-    box-sizing: border-box;
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
-    background-color: #F5F7FB;
+  box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  background-color: #F5F7FB;
 }
 
+
+
 .yellow-circle {
-    position: fixed;
-    top: 0px;
-    right: 0px;
+  position: fixed;
+  top: 0px;
+  right: 0px;
 }
+
 .blue-circle {
-    position: absolute;
-    left: 0px;
-    bottom: 0px;
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
 }
 
 .start-page {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 90vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
-.start-page > h4 {
-    margin-bottom: 0;
-    font-family: 'Karla';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 2rem;
-    line-height: 2.3rem;
-    text-align: center;
+.start-page>h4 {
+  margin-bottom: 0;
+  font-family: 'Karla';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 2.3rem;
+  text-align: center;
 }
 
-.start-page > p {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 1rem;
-    line-height: 1.2rem;
-    text-align: center;
+.start-page>p {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.2rem;
+  text-align: center;
 }
 
-.start-page > button {
-    width: 12rem;
-    height: 3.25rem;
-    background: #4D5B9E;
-    border-radius: 1rem;
-    border: 0px;
-    color: white;
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
-    font-weight: 400;
+.start-page>button {
+  width: 12rem;
+  height: 3.25rem;
+  background: #4D5B9E;
+  border-radius: 1rem;
+  border: 0px;
+  color: white;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.quiz-view {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.question>h1 {
+  margin: 0 15px;
+}
+
+.question>hr {
+  border: 0.794239px solid #DBDEF0;
+}
+
+.question--answer {
+  border: 1px solid #4D5B9E;
+  border-radius: 8px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 10.24px;
+  line-height: 12px;
+  text-align: center;
+  color: #293264;
+  padding: .25rem 1rem;
+}
+
+.question--answer-group {
+  display: flex;
+  flex-direction: row;
+  gap: .75rem;
 }
