--- a/src/style.css
+++ b/src/style.css
@@ -11,12 +11,14 @@
   position: fixed;
   top: 0px;
   right: 0px;
+  background-color: transparent;
 }
 
 .blue-circle {
   position: absolute;
   left: 0px;
   bottom: 0px;
+  background-color: transparent;
 }
 
 .start-page {
@@ -61,30 +63,53 @@
 .quiz-view {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
   justify-content: center;
   height: 100vh;
+  padding: 1em 7em;
+}
+
+.question {
+  display: flex;
+  flex-direction: column;
+  gap: .7em;
+  padding: 0 1em 0.5em 1em;
 }
 
 .question>h1 {
-  margin: 0 15px;
+  margin: 0;
+  font-family: 'Karla';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.2em;
+  line-height: 1.2em;
+  color: #293264;
 }
 
 .question>hr {
-  border: 0.794239px solid #DBDEF0;
+  border: .2px solid #DBDEF0;
+  width: 100%;
+  margin: .7em 0em;
 }
 
 .question--answer {
-  border: 1px solid #4D5B9E;
-  border-radius: 8px;
+  height: 2em;
+  border: 1.3px solid #4D5B9E;
+  border-radius: .7em;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
-  font-size: 10.24px;
-  line-height: 12px;
+  font-size: .7em;
+  line-height: .75em;
   text-align: center;
   color: #293264;
-  padding: .25rem 1rem;
+  min-width: 7em;
+  padding: 0em 1em;
+}
+
+.question--answer_selected {
+  border: 1px solid #D6DBF5;
+  background-color: #D6DBF5;
 }
 
 .question--answer-group {
