--- a/src/style.css
+++ b/src/style.css
@@ -63,10 +63,23 @@
 .quiz-view {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: center;
+  gap: 1.2em;
   justify-content: center;
   height: 100vh;
   padding: 1em 7em;
+}
+
+.quiz-view>button {
+  width: 12rem;
+  height: 3.25rem;
+  background: #4D5B9E;
+  border-radius: 1rem;
+  border: 0px;
+  color: white;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
 }
 
 .question {
@@ -110,6 +123,18 @@
 .question--answer_selected {
   border: 1px solid #D6DBF5;
   background-color: #D6DBF5;
+}
+
+.question--answer_selected-incorrect {
+  border: 1px solid #D6DBF5;
+  background-color: #F8BCBC;
+  color: #293264;
+}
+
+.question--answer_selected-correct {
+  border: 1px solid #D6DBF5;
+  background-color: #94D7A2;
+  color: #293264;
 }
 
 .question--answer-group {
