--- a/src/style.css
+++ b/src/style.css
@@ -70,16 +70,32 @@
   padding: 1em 7em;
 }
 
-.quiz-view>button {
-  width: 12rem;
-  height: 3.25rem;
+.quiz-footer {
+  display: flex;
+  flex-direction: row;
+  gap: 2em;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: .75em;
+  line-height: 1em;
+  text-align: center;
+  color: #293264;
+}
+
+.quiz-footer>button {
   background: #4D5B9E;
   border-radius: 1rem;
   border: 0px;
   color: white;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter';
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
+  font-size: 1em;
+  padding: 1.5em;
+  line-height: .75em;
 }
 
 .question {
